--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="vite.svg" type="image/x-icon">
-  <title>frontend</title>
+  <title>Apresentação UBD</title>
 </head>
 
-<body class="bg-gray-900">
+<body class="scroll-smooth bg-gray-900">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
